--- a/server/views/main.ejs
+++ b/server/views/main.ejs
@@ -23,7 +23,8 @@
 <body>
   <h1>ESP8266 Status:</h1>
   <p>ESP: <span id="esp-status">-</span></p>
-  <p>LED: <span id="led-status">-</span></p>
+  <p>LED: <span class="led-indicator"></span></p>
+  <p>Last Update: <span id="last-update">-</span></p>
   <button type="button" id="toggle-led">Turn LED on</button>
 
   <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"
@@ -38,7 +39,8 @@
 
       const socket = io();
       const espStatusEl = document.getElementById("esp-status");
-      const ledStatusEl = document.getElementById("led-status");
+      const ledStatusEl = document.querySelector(".led-indicator");
+      const lastUpdateEl = document.getElementById("last-update");
       const ledToggleBtn = document.getElementById("toggle-led");
 
       socket.on("connect", () => {
@@ -46,14 +48,15 @@
       });
 
       socket.on("state_update", (data) => {
-        const { esp_status, led_status } = data;
+        const { esp_status, led_status, esp_lastupdate } = data;
         state = { ...data };
 
         espStatusEl.innerText = esp_status ? 'Active' : 'Inactive';
         espStatusEl.style.color = esp_status ? 'green' : 'red';
 
-        ledStatusEl.innerHTML = `<div class="led-indicator" style="opacity: ${led_status ? '1.0' : '0.2'};"></div>`;
+        ledStatusEl.style.opacity = led_status ? 1.0 : 0.2;
         ledToggleBtn.innerText = `Turn LED ${led_status ? 'off' : 'on'}`;
+        lastUpdateEl.innerText = new Date(esp_lastupdate);
 
         console.log('state update', state);
       });
